# RKADE-sync

./: .gitignore  README.md  Untitled.ipynb  config.py  database.py  main.py  music_download.ipynb  music_to_spotify.py  pyproject.toml  run.py  ytdlp_test.ipynb
clients/: llm_client.py  spotify_client.py  ytmusic_client.py
matchers/: base_matcher.py  fuzzy_matcher.py  llm_matcher.py
rkade_sync/: Untitled.ipynb  build_dataset.py  config.py  oauth.json  playlist_manager.py  run.py  songs.json  spotify.py  test.py  tmp.py  youtube.py
rkade_sync/client/: spotify.py  youtube_music.py  yt_music.py
rkade_sync/helpers/: media.py  media_helpers.py  utils.py
utils/: logging_utils.py  text_processing.py
