[tool.poetry]
name = "rkade-sync"
version = "0.1.0"
description = ""
authors = ["Russell Kim <russellkim98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
spotipy = "^2.23.0"
ytmusicapi = "^1.3.2"
black = "^23.11.0"
yt-dlp = "^2023.11.16"
jupyterlab = "^4.1.5"
pytube = "^15.0.0"
pydub = "^0.25.1"
eyed3 = "^0.9.7"
async-pytube = "^1.0.2"
scipy = "^1.12.0"
urllib3 = "^2.2.1"
tqdm = "^4.66.2"
youtubemusicapi = "^2.8"
selenium = "^4.19.0"
levenshtein = "^0.25.1"
pandas = "^2.2.2"
browser-cookie3 = "^0.19.1"
musicbrainzngs = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
