[tool.poetry]
name = "rkade-sync"
version = "0.1.0"
description = ""
authors = ["Russell Kim <russellkim98@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.2.5"
plotly = "^5.24.0"
yt-dlp = "^2024.8.6"
pytubefix = "^6.14.0"
ytmusicapi = "^1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
